--- a/Feedback.html
+++ b/Feedback.html
@@ -115,9 +115,34 @@
 
     </div>
   </header>
-     
-      <h2></h2>
 
+  <section class="hero">
+        <div class="container">
+
+          <div class="hero-content">
+
+            <h1 class="h1 hero-title">
+              Send Us Your <strong>Feedback</strong>
+            </h1>
+
+            <div class="meta-wrapper">
+
+              <div class="badge-wrapper">
+                <div class="badge badge-fill"></div>
+
+                <div class="badge badge-outline"></div>
+              </div>
+
+              </div>
+
+                     <p class="hero-subtitle">Your Voice Matters - Help Us Shape Your Experience!</p>
+            </div>
+
+          </div>
+
+        </div>
+      </section>
+     
     <div class="feedback-container">
 
         <h1>Warner Bros Feedback</h1>
