Update Games & Apps.html

--- a/Games & Apps.html
+++ b/Games & Apps.html
@@ -171,9 +171,9 @@
 
             <button class="btn btn-primary">
               <ion-icon name="play"></ion-icon>
-              <a href = "https://www.warnerbros.com/"></a>
+              <a href = "https://www.warnerbros.com/games-and-apps"></a>
 
-              <span>Watch now</span>
+              <span>Play now</span>
             </button>
 
           </div>
