--- a/Collections.html
+++ b/Collections.html
@@ -147,13 +147,48 @@
     </div>
   </header>
 
+      <section class="hero">
+        <div class="container">
+
+          <div class="hero-content">
+
+            <h1 class="h1 hero-title">
+              A wide variety of <strong>Collections</strong> to choose from.
+            </h1>
+
+            <div class="meta-wrapper">
+
+              <div class="badge-wrapper">
+                <div class="badge badge-fill"></div>
+
+                <div class="badge badge-outline"></div>
+              </div>
+
+              </div>
+
+                     <p class="hero-subtitle">Curated Classics: Timeless Treasures for Every Fan</p>
+            </div>
+
+            <button class="btn btn-primary">
+              <ion-icon name="play"></ion-icon>
+              <a href = "https://www.warnerbros.com/collections"></a>
+
+              <span>Play now?</span>
+            </button>
+
+          </div>
+
+        </div>
+      </section>
+
+
 
 <section class="tv-series">
         <div class="container">
 
-          <p class="section-subtitle">Movies of the 80's, Drama Flicks and Fam Favourites.</p>
+           <h2 class="h2 section-title">COLLECTIONS</h2>
 
-          <h2 class="h2 section-title">COLLECTIONS</h2>
+          <p class="section-subtitle">Movies of the 80's, Drama Flicks and Fam Favourites.</p>
 
           <ul class="movies-list">
 
