--- a/TV Shows.html
+++ b/TV Shows.html
@@ -8,6 +8,10 @@
 
   
 <body>
+
+  <!-- 
+        - #HEADER
+      -->
  
  <header class="header" data-header>
     <div class="container">
@@ -129,6 +133,10 @@
     </div>
   </header>
 
+  <!-- 
+        - #HERO
+      -->
+
    <section class="hero">
         <div class="container">
 
@@ -163,6 +171,10 @@
         </div>
       </section>
 
+
+  <!-- 
+        - #TV SERIES
+      -->
 
 <section class="tv-series">
         <div class="container">
@@ -332,9 +344,9 @@
       <section class="tv-series">
         <div class="container">
 
-          <p class="section-subtitle"></p>
+          <p class="section-subtitle">What's On Trend Lately</p>
 
-          <h2 class="h2 section-title">Best TV Series Of The Week</h2>
+          <h2 class="h2 section-title">Top Rated TV Series Of The Week</h2>
 
           <ul class="movies-list">
 
