Update Games & Apps.html

--- a/Games & Apps.html
+++ b/Games & Apps.html
@@ -28,6 +28,10 @@
 
     <body id = "top">
 
+<!-- 
+        - #HEADER
+      -->
+      
      <header class="header" data-header>
     <div class="container">
 
@@ -147,6 +151,10 @@
     </div>
   </header>
 
+      <!-- 
+        - #HERO
+      -->
+
       <section class="hero">
         <div class="container">
 
@@ -180,6 +188,10 @@
 
         </div>
       </section>
+
+      <!-- 
+        - #GAMES LIST
+      -->
 
   <main>
     <article>
