--- a/Feedback.html
+++ b/Feedback.html
@@ -30,6 +30,9 @@
 
 <body>
 
+  <!-- 
+        - #HEADER
+      -->
   
   <header class="header" data-header>
     <div class="container">
@@ -116,6 +119,10 @@
     </div>
   </header>
 
+  <!-- 
+        - #HERO
+      -->
+
   <section class="hero">
         <div class="container">
 
@@ -142,6 +149,10 @@
 
         </div>
       </section>
+
+  <!-- 
+        - #FEEDBACK CONTENT
+      -->
      
     <div class="feedback-container">
 
