--- a/Collections.html
+++ b/Collections.html
@@ -26,6 +26,10 @@
 </head>
 
     <body>
+
+      <!-- 
+        - #HEADER
+      -->
  
  <header class="header" data-header>
     <div class="container">
@@ -147,6 +151,10 @@
     </div>
   </header>
 
+      <!-- 
+        - #HERO
+      -->
+
       <section class="hero">
         <div class="container">
 
@@ -180,7 +188,11 @@
 
         </div>
       </section>
+      
 
+      <!-- 
+        - #COLLECTIONS LIST
+      -->
 
 
 <section class="tv-series">
