--- a/TV Shows.html
+++ b/TV Shows.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Warner Bros | TV Shows</title>
 
+  <!-- 
+    - favicon
+  -->
+  <link rel="shortcut icon" href="https://seeklogo.com/images/W/Warner_Bros_Online-logo-888536E54D-seeklogo.com.png" type="">
+
+  <!-- 
+    - custom css link
+  -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- 
+    - google font link
+  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 
   
