--- a/Collections.html
+++ b/Collections.html
@@ -1,15 +1,14 @@
 <Doctype>
-  <html>
-   <head>
+  <html><head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Warner Bros: Collections</title>
+  <title>Warner Bros | Collections</title>
 
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="https://seeklogo.com/images/W/Warner_Bros_Online-logo-888536E54D-seeklogo.com.png" type="">
 
   <!-- 
     - custom css link
@@ -24,6 +23,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 </head>
+
 
     <body>
 
