--- a/Feedback.html
+++ b/Feedback.html
@@ -2,17 +2,16 @@
   <html>
    <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Warner Bros - Feedback</title>
+  <title>Warner Bros | Feedback</title>
 
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="https://seeklogo.com/images/W/Warner_Bros_Online-logo-888536E54D-seeklogo.com.png" type="">
 
   <!-- 
     - custom css link
@@ -28,7 +27,6 @@
 
 </head>
 
-<body>
 
   <!-- 
         - #HEADER
