--- a/Games & Apps.html
+++ b/Games & Apps.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Warner Bros: Games And Apps</title>
+  <title>Warner Bros | Games And Apps</title>
 
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="https://seeklogo.com/images/W/Warner_Bros_Online-logo-888536E54D-seeklogo.com.png" type="">
 
   <!-- 
     - custom css link
@@ -25,6 +25,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 </head>
+
 
     <body id = "top">
 
