Update Games & Apps.html

--- a/Games & Apps.html
+++ b/Games & Apps.html
@@ -495,7 +495,8 @@
             </li>
 
             <li>
-               <a href = "https://www.warnerbros.com/games-and-apps"> See More? </a>
+               <a href = "https://www.warnerbros.com/games-and-apps"></a>
+               <p class="hero-subtitle">See More?</p>
             </li>
 
           </ul>
