--- a/Movies.html
+++ b/Movies.html
@@ -820,7 +820,8 @@
             </li>
 
              <li>
-               <a href = "https://www.warnerbros.com/movies"> See More? </a>
+               <a href = "https://www.warnerbros.com/movies"></a>
+                      <p class="hero-subtitle">See More?</p>
             </li>
 
           </ul>
