--- a/TV Shows.html
+++ b/TV Shows.html
@@ -665,7 +665,8 @@
             </li>
 
             <li>
-              <a href = "https://www.warnerbros.com/tv"> See More? </a>
+              <a href = "https://www.warnerbros.com/tv"></a>
+                     <p class="hero-subtitle">See More?</p>
             </li>
           </ul>
 
