--- a/Collections.html
+++ b/Collections.html
@@ -665,7 +665,8 @@
             </li>
 
             <li>
-              <a href = "https://www.warnerbros.com/collections"> See More? </a>
+              <a href = "https://www.warnerbros.com/collections"></a>
+                     <p class="hero-subtitle">See More?</p>
             </li>
           </ul>
 
