Update Games & Apps.html

--- a/Games & Apps.html
+++ b/Games & Apps.html
@@ -494,6 +494,13 @@
               </div>
             </li>
 
+
+            <video width="700" height="240" controls>
+  <source src="https://videos.pexels.com/video-files/6557556/6557556-uhd_4096_2160_25fps.mp4" type="video/mp4">
+  <source src="https://videos.pexels.com/video-files/6557556/6557556-uhd_4096_2160_25fps.mp4" type="video/ogg">
+  Your browser does not support the video tag.
+</video>
+            
             <li>
                <a href = "https://www.warnerbros.com/games-and-apps"></a>
                <p class="hero-subtitle">See More?</p>
