--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 
 <body>
 
+   <video width="720" height="240" controls>
+  <source src="https://videos.pexels.com/video-files/7639588/7639588-sd_540_960_30fps.mp4" type="video/mp4">
+  <source src="https://videos.pexels.com/video-files/7639588/7639588-sd_540_960_30fps.mp4" type="video/ogg">
+Your browser does not support the video tag.
+</video> 
+
   <!-- 
     - #HEADER
   -->
