--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
 
 <body> 
 
+  <style> 
+#example1 {
+  background: url(https://videos.pexels.com/video-files/7639588/7639588-sd_540_960_30fps.mp4) left top no-repeat, url(https://videos.pexels.com/video-files/7639588/7639588-sd_540_960_30fps.mp4) right bottom no-repeat, url(https://videos.pexels.com/video-files/7639588/7639588-sd_540_960_30fps.mp4) left top repeat;
+  padding: 15px;
+  background-size: 50px, 130px, auto;
+}
+</style>
   <!-- 
     - #HEADER
   -->
