--- a/index.html
+++ b/index.html
@@ -27,18 +27,10 @@
 </head>
 
 <body> 
-
-  <style> 
-vid1 {
-  background: url(https://videos.pexels.com/video-files/7639588/7639588-sd_540_960_30fps.mp4) left top no-repeat, url(https://videos.pexels.com/video-files/7639588/7639588-sd_540_960_30fps.mp4) right bottom no-repeat, url(https://videos.pexels.com/video-files/7639588/7639588-sd_540_960_30fps.mp4) left top repeat;
-  padding: 15px;
-  background-size: 50px, 130px, auto;
-}
-</style>
   <!-- 
     - #HEADER
   -->
-
+<div class = "vid1">
    <header class="header" data-header>
     <div class="container">
 
@@ -125,7 +117,7 @@ vid1 {
     </div>
   </header>
 
- <h2 class="h2 section-title">HOME</h2>
+   <h2 class="h2 section-title">HOME</h2>
 
             <p class="section-subtitle">Warner Bros. is a major American entertainment company known for its film, television, and video game productions. Founded in 1923, it has since grown into one of the largest media conglomerates in the world, with a diverse portfolio that includes the Warner Bros. Pictures film studio, Warner Bros. Television, Warner Bros. Interactive Entertainment, and Warner Bros. Consumer Products</p>
 
@@ -188,6 +180,7 @@ vid1 {
 
         </div>
       </section>
-    
+
+</div>
 </body>
 </html>
