--- a/Collections.html
+++ b/Collections.html
@@ -673,8 +673,10 @@
         </div>
       </section>
 
-
-
+      <footer>
+    <link rel="shortcut icon" href="https://seeklogo.com/images/W/Warner_Bros_Online-logo-888536E54D-seeklogo.com.png" type="">
+     <p class="section-subtitle"> TM & © 2024 Warner Bros. Entertainment Inc. All rights reserved.</p>
+  </footer>
+      
 </body>
-  </html>
-</Doctype>
+</html>
