--- a/index.html
+++ b/index.html
@@ -171,9 +171,8 @@
 
             <button class="btn btn-primary">
               <ion-icon name="play"></ion-icon>
-              <a href = "https://www.warnerbros.com/"></a>
-
-              <span>Watch/Play now</span>
+          
+              <span><a href = "https://www.warnerbros.com/">Watch/Play now</a></span>
             </button>
 
           </div>
