--- a/TV Shows.html
+++ b/TV Shows.html
@@ -194,8 +194,8 @@
   <!-- 
         - #TV SERIES
       -->
-
-<section class="tv-series">
+<div class = "vid1">
+ <section class="tv-series">
         <div class="container">
 
           <p class="section-subtitle">Best TV Series</p>
@@ -678,5 +678,6 @@
     <link rel="shortcut icon" href="https://seeklogo.com/images/W/Warner_Bros_Online-logo-888536E54D-seeklogo.com.png" type="">
      <p class="section-subtitle"> TM & © 2024 Warner Bros. Entertainment Inc. All rights reserved.</p>
   </footer>
+</div>
 </body>
 </html>
