--- a/Movies.html
+++ b/Movies.html
@@ -156,7 +156,7 @@
       <!-- 
         - #HERO
       -->
-
+<div class ="vid1">
        <section class="hero">
         <div class="container">
 
@@ -835,5 +835,6 @@
     <link rel="shortcut icon" href="https://seeklogo.com/images/W/Warner_Bros_Online-logo-888536E54D-seeklogo.com.png" type="">
      <p class="section-subtitle"> TM & © 2024 Warner Bros. Entertainment Inc. All rights reserved.</p>
   </footer>
+</div>
 </body>
 </html>
