Update Games & Apps.html

--- a/Games & Apps.html
+++ b/Games & Apps.html
@@ -155,7 +155,7 @@
       <!-- 
         - #HERO
       -->
-
+<div class = "vid1">
       <section class="hero">
         <div class="container">
 
@@ -511,6 +511,7 @@
       <footer>
     <link rel="shortcut icon" href="https://seeklogo.com/images/W/Warner_Bros_Online-logo-888536E54D-seeklogo.com.png" type="">
      <p class="section-subtitle"> TM & © 2024 Warner Bros. Entertainment Inc. All rights reserved.</p>
-  </footer>
+    </footer>
+</div>
     </body>
   </html>
