--- a/Feedback.html
+++ b/Feedback.html
@@ -120,7 +120,7 @@
   <!-- 
         - #HERO
       -->
-
+<div class = "vid1">
   <section class="hero">
         <div class="container">
 
@@ -176,7 +176,7 @@
 
 <p>"Be Sure To Find Us On The Following Platforms If You Wish Get in Touch With Us: "</p>
 
-<div>
+ <div>
  <main>
   <article>
   <ul>
@@ -206,12 +206,13 @@
    </ul>
     
   </article>
- </main>
-</div>
+  </main>
+ </div>
 
       <footer>
     <link rel="shortcut icon" href="https://seeklogo.com/images/W/Warner_Bros_Online-logo-888536E54D-seeklogo.com.png" type="">
      <p class="section-subtitle"> TM & © 2024 Warner Bros. Entertainment Inc. All rights reserved.</p>
   </footer>
+</div>
 </body>
 </html>
